python/rregadmin/hive/key_cell_wrapper.py

key_cell_get_key_list_cell.restype = POINTER(KeyListCell)
# key_cell_get_key_list_cell(in_kc)
key_cell_get_key_list_cell.argtypes = [POINTER(KeyCell)]
key_cell_get_key_list_cell.__doc__ = \
"""KeyListCell * key_cell_get_key_list_cell(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:281"""
# ../../../rregadmin/hive/key_cell.h 289
key_cell_get_value_list_cell = _libraries['librregadmin.so.1'].key_cell_get_value_list_cell
key_cell_get_value_list_cell.restype = POINTER(ValueListCell)
# key_cell_get_value_list_cell(in_kc)
key_cell_get_value_list_cell.argtypes = [POINTER(KeyCell)]
key_cell_get_value_list_cell.__doc__ = \
"""ValueListCell * key_cell_get_value_list_cell(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:289"""
# ../../../rregadmin/hive/key_cell.h 297
key_cell_get_security_descriptor_cell = _libraries['librregadmin.so.1'].key_cell_get_security_descriptor_cell
key_cell_get_security_descriptor_cell.restype = POINTER(SecurityDescriptorCell)
# key_cell_get_security_descriptor_cell(in_kc)
key_cell_get_security_descriptor_cell.argtypes = [POINTER(KeyCell)]
key_cell_get_security_descriptor_cell.__doc__ = \
"""SecurityDescriptorCell * key_cell_get_security_descriptor_cell(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:297"""
# ../../../rregadmin/secdesc/security_descriptor.h 62
class SecurityDescriptor_(Structure):
    pass
SecurityDescriptor = SecurityDescriptor_
# ../../../rregadmin/hive/key_cell.h 303
key_cell_get_secdesc = _libraries['librregadmin.so.1'].key_cell_get_secdesc
key_cell_get_secdesc.restype = POINTER(SecurityDescriptor)
# key_cell_get_secdesc(in_kc)
key_cell_get_secdesc.argtypes = [POINTER(KeyCell)]
key_cell_get_secdesc.__doc__ = \
"""unknown * key_cell_get_secdesc(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:303"""
# ../../../rregadmin/hive/key_cell.h 310
key_cell_set_secdesc = _libraries['librregadmin.so.1'].key_cell_set_secdesc
key_cell_set_secdesc.restype = gboolean
# key_cell_set_secdesc(in_kc, in_secdesc)
key_cell_set_secdesc.argtypes = [POINTER(KeyCell), POINTER(SecurityDescriptor)]
key_cell_set_secdesc.__doc__ = \
"""gboolean key_cell_set_secdesc(KeyCell * in_kc, unknown * in_secdesc)
../../../rregadmin/hive/key_cell.h:310"""
# ../../../rregadmin/hive/key_cell.h 318
key_cell_get_classname_value_cell = _libraries['librregadmin.so.1'].key_cell_get_classname_value_cell
key_cell_get_classname_value_cell.restype = POINTER(ValueCell)
# key_cell_get_classname_value_cell(in_kc)
key_cell_get_classname_value_cell.argtypes = [POINTER(KeyCell)]
key_cell_get_classname_value_cell.__doc__ = \
"""ValueCell * key_cell_get_classname_value_cell(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:318"""
# ../../../rregadmin/hive/key_cell.h 326
key_cell_debug_print = _libraries['librregadmin.so.1'].key_cell_debug_print
key_cell_debug_print.restype = None
# key_cell_debug_print(in_kc)
key_cell_debug_print.argtypes = [POINTER(KeyCell)]
key_cell_debug_print.__doc__ = \
"""void key_cell_debug_print(KeyCell * in_kc)
../../../rregadmin/hive/key_cell.h:326"""
# ../../../rregadmin/hive/key_cell.h 334
key_cell_pretty_print = _libraries['librregadmin.so.1'].key_cell_pretty_print
key_cell_pretty_print.restype = None
# key_cell_pretty_print(in_kc, in_pathname)
key_cell_pretty_print.argtypes = [POINTER(KeyCell), STRING]
key_cell_pretty_print.__doc__ = \
"""void key_cell_pretty_print(KeyCell * in_kc, unknown * in_pathname)
../../../rregadmin/hive/key_cell.h:334"""
# ../../../rregadmin/hive/key_cell.h 341
key_cell_get_pretty_output = _libraries['librregadmin.so.1'].key_cell_get_pretty_output
key_cell_get_pretty_output.restype = gboolean
# key_cell_get_pretty_output(in_kc, in_pathname, in_output)
key_cell_get_pretty_output.argtypes = [POINTER(KeyCell), STRING, POINTER(ustring)]
key_cell_get_pretty_output.__doc__ = \
"""gboolean key_cell_get_pretty_output(KeyCell * in_kc, unknown * in_pathname, ustring * in_output)
../../../rregadmin/hive/key_cell.h:341"""
# ../../../rregadmin/hive/key_cell.h 347
key_cell_get_xml_output = _libraries['librregadmin.so.1'].key_cell_get_xml_output
key_cell_get_xml_output.restype = gboolean
# key_cell_get_xml_output(in_kc, in_output)
key_cell_get_xml_output.argtypes = [POINTER(KeyCell), POINTER(ustring)]
key_cell_get_xml_output.__doc__ = \
"""gboolean key_cell_get_xml_output(KeyCell * in_kc, ustring * in_output)
../../../rregadmin/hive/key_cell.h:347"""
# ../../../rregadmin/hive/key_cell.h 355
key_cell_get_parseable_output = _libraries['librregadmin.so.1'].key_cell_get_parseable_output
key_cell_get_parseable_output.restype = gboolean
# key_cell_get_parseable_output(in_kc, in_pathname, in_output)
key_cell_get_parseable_output.argtypes = [POINTER(KeyCell), STRING, POINTER(ustring)]
key_cell_get_parseable_output.__doc__ = \
"""gboolean key_cell_get_parseable_output(KeyCell * in_kc, unknown * in_pathname, ustring * in_output)
../../../rregadmin/hive/key_cell.h:355"""
SecurityDescriptor_._fields_ = [
    # ../../../rregadmin/secdesc/security_descriptor.h 62
]
__all__ = ['key_cell_get_secdesc', 'key_cell_get_subkey_str',
           'key_cell_get_value_str', 'key_cell_get_value_list_cell',
           'key_cell_alloc_root', 'key_cell_get_value_ustr',
           'key_cell_set_secdesc', 'key_cell_get_number_of_subkeys',
           'SecurityDescriptor_', 'key_cell_get_type_id',
           'key_cell_get_subkey_ustr',
           'key_cell_get_parseable_output', 'SecurityDescriptor',
           'key_cell_get_classname_value_cell',
           'key_cell_get_pretty_output', 'key_cell_get_classname',
           'key_cell_get_number_of_values',
           'key_cell_get_key_list_cell', 'key_cell_debug_print',
           'key_cell_type', 'key_cell_delete_subkey_ustr',
           'key_cell_get_name', 'key_cell_add_subkey',
           'key_cell_alloc', 'key_cell_delete_value_str',
           'key_cell_pretty_print', 'key_cell_add_value',
           'key_cell_unalloc', 'key_cell_delete_value_ustr',
           'key_cell_from_cell', 'key_cell_set_key_list_cell',
           'key_cell_get_type_str', 'key_cell_get_subkey',
           'key_cell_get_value', 'key_cell_to_cell',
           'key_cell_delete_subkey', 'key_cell_is_valid',
           'key_cell_get_parent',
           'key_cell_get_security_descriptor_cell',
           'key_cell_get_xml_output', 'key_cell_compare_names',
           'key_cell_delete_subkey_str', 'key_cell_delete_value']
